fix(contrast-ratio): fix color with the recomended contrast ratio value

--- a/src/app/components/tabs-container/tabs-container.scss
+++ b/src/app/components/tabs-container/tabs-container.scss
@@ -44,7 +44,7 @@ $content-bg: #f8f9fa;
       white-space: nowrap;
 
       &.active {
-        color: $active-color-accent;
+        color: #0056b2;
         background: white;
         border: none;
         border-bottom: 4px solid $active-color-accent;
